--- a/01-intro/index.html
+++ b/01-intro/index.html
@@ -12,24 +12,24 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
-    <link rel="stylesheet" href="css/reveal.css">
-    <link rel="stylesheet" href="css/theme/yandex.css" id="theme">
+    <link rel="stylesheet" href="../css/reveal.css">
+    <link rel="stylesheet" href="../css/theme/yandex.css" id="theme">
     <link rel="stylesheet" href="css/user.css">
 
     <!-- Code syntax highlighting -->
-    <link rel="stylesheet" href="lib/css/zenburn.css">
+    <link rel="stylesheet" href="../lib/css/zenburn.css">
 
     <!-- Printing and PDF exports -->
     <script>
         var link = document.createElement('link');
         link.rel = 'stylesheet';
         link.type = 'text/css';
-        link.href = window.location.search.match(/print-pdf/gi) ? 'css/print/pdf.css' : 'css/print/paper.css';
+        link.href = window.location.search.match(/print-pdf/gi) ? '../css/print/pdf.css' : '../css/print/paper.css';
         document.getElementsByTagName('head')[0].appendChild(link);
     </script>
 
     <!--[if lt IE 9]>
-    <script src="lib/js/html5shiv.js"></script>
+    <script src="../lib/js/html5shiv.js"></script>
     <![endif]-->
 </head>
 
@@ -845,8 +845,8 @@ git push origin master
     </div>
 </div>
 
-<script src="lib/js/head.min.js"></script>
-<script src="js/reveal.js"></script>
+<script src="../lib/js/head.min.js"></script>
+<script src="../js/reveal.js"></script>
 
 <script>
 
@@ -864,29 +864,29 @@ git push origin master
         // Optional reveal.js plugins
         dependencies: [
             {
-                src: 'lib/js/classList.js', condition: function () {
+                src: '../lib/js/classList.js', condition: function () {
                 return !document.body.classList;
             }
             },
             {
-                src: 'plugin/markdown/marked.js', condition: function () {
+                src: '../plugin/markdown/marked.js', condition: function () {
                 return !!document.querySelector('[data-markdown]');
             }
             },
             {
-                src: 'plugin/markdown/markdown.js', condition: function () {
+                src: '../plugin/markdown/markdown.js', condition: function () {
                 return !!document.querySelector('[data-markdown]');
             }
             },
             {
-                src: 'plugin/highlight/highlight.js', async: true, condition: function () {
+                src: '../plugin/highlight/highlight.js', async: true, condition: function () {
                 return !!document.querySelector('pre code');
             }, callback: function () {
                 hljs.initHighlightingOnLoad();
             }
             },
-            { src: 'plugin/zoom-js/zoom.js', async: true },
-            { src: 'plugin/notes/notes.js', async: true }
+            { src: '../plugin/zoom-js/zoom.js', async: true },
+            { src: '../plugin/notes/notes.js', async: true }
         ]
     });
 
