--- a/01-intro/index.html
+++ b/01-intro/index.html
@@ -363,7 +363,7 @@ const export import
             <h2>Основы языка</h2>
             <h4>Операторы<sup>(*)</sup> <sup>(**)</sup></h4>
             <br/><br/>
-            <div class="size-XS">(*) - подробнее об этом в следующих лекции</div>
+            <div class="size-XS">(*) - подробнее об этом в следующих лекциях</div>
             <div class="size-XS">(**) - операторы перечислены по убыванию приоритета</div>
         </section>
 
